--- a/templates/sign/signup.html
+++ b/templates/sign/signup.html
@@ -32,7 +32,7 @@
             <input type="email" name="email" placeholder="휴대폰 번호 또는 이메일 주소" required><br>
             <input type="password" name="password" placeholder="비밀번호" autocomplete="new-password" required><br>
             <input type="text" name="username" placeholder="성명" required><br>
-            <input type="text" name="userid" placeholder="사용자 아이디" autocomplete="off" required><br>
+            <input type="text" name="userid" placeholder="학번" autocomplete="off" required><br>
             <input type="submit" value="계정 생성">
         </form>
 
